--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Яндекс.Такси</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/jquery.mCustomScrollbar.css">
 </head>
 
 <body>
   <nav class="navbar">
     <div class="container">
       <div class="navbar-block">
-        <div class="navbar__icon"><img src="./img/navbar/menu-button.svg" alt="&#9776;"></div>
+        <div class="navbar__icon"><img src="./img/icons/menu-button.svg" alt="&#9776;"></div>
         <div class="navbar__logo">
           <div class="navbar__image"><img src="./img/navbar/navbar-logo.png" alt="Яндекс.Такси"></div>
           <span class="navbar__text">Партнеры <br>р. Башкортостан</span>
@@ -79,17 +78,17 @@
           <!-- /.features__text -->
           <div class="features__list">
             <div class="features__item">
-              <div class="features-item__image"><img src="./img/features/comp.svg" alt="Компьютер"></div>
+              <div class="features-item__image"><img src="./img/icons/comp.svg" alt="Компьютер"></div>
               <h3 class="features-item__title">Дистанционное подключение</h3>
               <p class="features-item__text">Чтобы начать принимать заказы, просто оставьте заявку на сайте.</p>
             </div>
             <div class="features__item">
-              <div class="features-item__image"><img src="./img/features/cards.svg" alt="Карты"></div>
+              <div class="features-item__image"><img src="./img/icons/cards.svg" alt="Карты"></div>
               <h3 class="features-item__title">Моментальные выплаты на карту</h3>
               <p class="features-item__text">Выводите деньги из приложения себе на карту, когда хотите.</p>
             </div>
             <div class="features__item">
-              <div class="features-item__image"><img src="./img/features/calendar.svg" alt="Календарь"></div>
+              <div class="features-item__image"><img src="./img/icons/calendar.svg" alt="Календарь"></div>
               <h3 class="features-item__title">Свободный график работы</h3>
               <p class="features-item__text">Вы сами выбираете, когда работать.</p>
             </div>
@@ -370,11 +369,11 @@
               <p class="request__phone">Или свяжитесь с нами самостоятельно: <a href="tel:8(903)000-00-00">8 (903)
                   000-00-00</a></p>
               <div class="request__links">
-                <a href="" class="button button_light request__link"><img src="./img/request/icon_whatsapp.svg"
+                <a href="" class="button button_light request__link"><img src="./img/icons/icon_whatsapp.svg"
                     alt="">watsapp</a>
-                <a href="" class="button button_light request__link"><img src="./img/request/icon_viber.svg"
+                <a href="" class="button button_light request__link"><img src="./img/icons/icon_viber.svg"
                     alt="">viber</a>
-                <a href="" class="button button_light request__link"><img src="./img/request/icon_telegram.svg"
+                <a href="" class="button button_light request__link"><img src="./img/icons/icon_telegram.svg"
                     alt="">telegram</a>
               </div>
             </div>
@@ -822,11 +821,11 @@
               000-00-00</a></p>
           <div class="request__links">
             <a href="" class="button button_light request__link modal-request__link"><img
-                src="./img/request/icon_whatsapp.svg" alt="">watsapp</a>
+                src="./img/icons/icon_whatsapp.svg" alt="">watsapp</a>
             <a href="" class="button button_light request__link modal-request__link"><img
-                src="./img/request/icon_viber.svg" alt="">viber</a>
+                src="./img/icons/icon_viber.svg" alt="">viber</a>
             <a href="" class="button button_light request__link modal-request__link"><img
-                src="./img/request/icon_telegram.svg" alt="">telegram</a>
+                src="./img/icons/icon_telegram.svg" alt="">telegram</a>
           </div>
         </div>
       </div>
@@ -978,7 +977,7 @@
     </div>
   </div>
   <script src="./js/jquery-3.3.1.min.js"></script>
-  <script src="./js/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script src="./js/mCustomScrollbar.concat.min.js"></script>
   <script src="./js/main.js"></script>
 
 </body>
